src/frontend/k8/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bookstore-frontend
  namespace: bookstore-frontend
  labels:
    app: bookstore
spec:
  containers:
  - name: bookstore-frontend
    image: andrewacr.azurecr.io/bookstore-frontend
    ports:
    - containerPort: 5055
