src/frontend/k8/bookstore-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-frontend-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80 
    targetPort: 5055 
    protocol: TCP
  selector:
    app: bookstore
