src/frontend/k8/bookstore-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-ingress
  namespace: bookstore-frontend
spec:
  rules:
  - http:
      paths:
      - path: / 
        pathType: Prefix 
        backend:
          service:
            name: bookstore-frontend-svc
            port:
              number: 80
